# rental-property-app

proptrack/: README.md  SETUP.md  generate_icon.py  index.html  package-lock.json  package.json  vite.config.js
proptrack/src/: App.jsx
proptrack/src-tauri/: Cargo.toml  tauri.conf.json
