[package]
name = "proptrack"
version = "1.0.0"
description = "PropTrack - Rental Property Manager"
authors = ["Andrew"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "fs-create-dir", "fs-exists",
  "fs-read-file",
  "fs-write-file",
  "path-all",
  "dialog-save",
  "dialog-open",
  "shell-open"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
